--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ JwtExpire = 6d
 # database 
 DB_TYPE="postgres"
 DB_HOST="localhost"
-DB_PORT="5432"
+DB_PORT=5432
 DB_USERNAME="postgres"   
 DB_PASSWORD="Test@123"   
 DB_DATABASE="testdb"   
